- records view example

--- a/Work Tracker/AndroidManifest.xml
+++ b/Work Tracker/AndroidManifest.xml
@@ -10,13 +10,19 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".WorkTrackerActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_name"
+            android:name=".ui.WorkTrackerActivity" 
+            android:theme="@android:style/Theme.Black.NoTitleBar">
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.records.RecordsActivity"
+            android:screenOrientation="portrait" 
+            android:theme="@android:style/Theme.Black.NoTitleBar">
         </activity>
     </application>
 
