--- a/Work Tracker/AndroidManifest.xml
+++ b/Work Tracker/AndroidManifest.xml
@@ -69,6 +69,9 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
+        <activity android:name=".ui.AddPunchInActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Dialog" >></activity>
     </application>
 
 </manifest>
