--- a/Work Tracker/.classpath
+++ b/Work Tracker/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/GoogleAdMobAdsSdk-4.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/opencsv-2.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
